# ecommerce-fastapi

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
ecommerce/: main.py
ecommerce/core/config/: __init__.py  db.py
ecommerce/core/exceptions/: __init__.py
ecommerce/core/models/: __init__.py  order.py  product.py
ecommerce/core/repositories/: db.py  order_repository.py  product_repository.py
ecommerce/core/schemas/: order_schema.py  product_schema.py
ecommerce/core/services/: order_service.py  product_service.py
ecommerce/scripts/: create_dummy_data.py
ecommerce/v1/routes/: order.py  product.py
tests/v1/: test_order_service.py  test_product_service.py
