[project]
name = "ecommerce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.115.11",
    "greenlet>=3.1.1",
    "psycopg2>=2.9.10",
    "sqlalchemy>=2.0.38",
    "sqlalchemy-stubs>=0.4",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "typer>=0.15.2",
]
